--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>COUCOU</title>
 </head>
 <body>
-    <h1> site publié sur github</h1>
+    <p> ça aurait été beaucoup trop facile ma grande... Allez réflechis serieusement à l'épreuve 2 ;) </p>
 </body>
 </html>
